--- a/Electricity_Fraud_Detection_Pipeline_(2).ipynb
+++ b/Electricity_Fraud_Detection_Pipeline_(2).ipynb
@@ -82,23 +82,10 @@
         }
       ],
       "source": [
-        "# !pip install tensorflow==2.12.0\n",
-        "# !pip install -U imbalanced-learn\n",
-        "# import tensorflow as tf\n",
-        "# print(tf.__version__)\n",
-        "\n",
-        "\n",
-        "# not required ---------------\n",
-        "# !pip install tensorflow==2.18.0\n",
-        "# !pip install -U imbalanced-learn\n",
-        "\n",
-        "# !pip install jax==0.5.3 jaxlib==0.5.3\n",
-        "# !pip install protobuf==5.29.1\n",
-        "\n",
-        "# import tensorflow as tf\n",
-        "# print(tf.__version__)\n",
-        "# # 2. (Optional but recommended) Upgrade pip itself\n",
-        "# # !pip install --upgrade pip\n"
+        "!pip install tensorflow==2.12.0\n",
+        "!pip install -U imbalanced-learn\n",
+        "import tensorflow as tf\n",
+        "print(tf.__version__)\n"
       ]
     },
     {
@@ -118,13 +105,6 @@
       },
       "outputs": [],
       "source": [
-        "# !pip uninstall -y numpy\n",
-        "# !pip install numpy\n",
-        "\n",
-        "# # 2. Reinstall scikit-learn cleanly\n",
-        "# !pip uninstall -y scikit-learn\n",
-        "# !pip install scikit-learn\n",
-        "\n",
         "\n",
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
@@ -911,139 +891,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "LSTM"
-      ],
-      "metadata": {
-        "id": "KpAbujh06lwr"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import LSTM, Dense\n",
-        "from tensorflow.keras.callbacks import Callback\n",
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "from sklearn.metrics import (\n",
-        "    roc_auc_score, accuracy_score, confusion_matrix,\n",
-        "    ConfusionMatrixDisplay, roc_curve, auc\n",
-        ")\n",
-        "\n",
-        "# Custom callback (same as CNN version)\n",
-        "class LSTMMetricsCallback(Callback):\n",
-        "    def __init__(self, X_test, y_test):\n",
-        "        super().__init__()\n",
-        "        self.X_test = X_test\n",
-        "        self.y_test = y_test\n",
-        "        self.auc_per_epoch = []\n",
-        "        self.accuracy_per_epoch = []\n",
-        "        self.loss_per_epoch = []\n",
-        "\n",
-        "    def on_epoch_end(self, epoch, logs=None):\n",
-        "        y_pred_prob = self.model.predict(self.X_test)\n",
-        "        y_pred = (y_pred_prob > 0.5).astype(\"int32\")\n",
-        "\n",
-        "        auc_score = roc_auc_score(self.y_test, y_pred_prob)\n",
-        "        acc_score = accuracy_score(self.y_test, y_pred) * 100\n",
-        "\n",
-        "        self.auc_per_epoch.append(auc_score)\n",
-        "        self.accuracy_per_epoch.append(acc_score)\n",
-        "        self.loss_per_epoch.append(logs.get('loss'))\n",
-        "\n",
-        "        print(f\"Epoch {epoch+1}: AUC = {auc_score:.4f}, Accuracy = {acc_score:.2f}%, Loss = {logs.get('loss'):.4f}\")\n",
-        "\n",
-        "# Plotting function (reuse from CNN1D)\n",
-        "def plot_metrics(metrics_callback, y_test, y_pred_prob, y_pred):\n",
-        "    plt.figure(figsize=(12, 5))\n",
-        "\n",
-        "    plt.subplot(1, 2, 1)\n",
-        "    plt.plot(metrics_callback.accuracy_per_epoch, label='Accuracy (%)')\n",
-        "    plt.xlabel('Epoch')\n",
-        "    plt.ylabel('Accuracy')\n",
-        "    plt.title('Accuracy vs Epoch')\n",
-        "    plt.grid(True)\n",
-        "    plt.legend()\n",
-        "\n",
-        "    plt.subplot(1, 2, 2)\n",
-        "    plt.plot(metrics_callback.loss_per_epoch, label='Loss', color='orange')\n",
-        "    plt.xlabel('Epoch')\n",
-        "    plt.ylabel('Loss')\n",
-        "    plt.title('Loss vs Epoch')\n",
-        "    plt.grid(True)\n",
-        "    plt.legend()\n",
-        "\n",
-        "    plt.tight_layout()\n",
-        "    plt.show()\n",
-        "\n",
-        "    # Confusion Matrix\n",
-        "    cm = confusion_matrix(y_test, y_pred)\n",
-        "    disp = ConfusionMatrixDisplay(confusion_matrix=cm)\n",
-        "    disp.plot(cmap='Blues')\n",
-        "    plt.title(\"Confusion Matrix\")\n",
-        "    plt.grid(False)\n",
-        "    plt.show()\n",
-        "\n",
-        "    # AUC-ROC\n",
-        "    fpr, tpr, _ = roc_curve(y_test, y_pred_prob)\n",
-        "    roc_auc = auc(fpr, tpr)\n",
-        "    plt.figure()\n",
-        "    plt.plot(fpr, tpr, label=f\"AUC = {roc_auc:.4f}\")\n",
-        "    plt.plot([0, 1], [0, 1], 'k--')\n",
-        "    plt.xlabel(\"False Positive Rate\")\n",
-        "    plt.ylabel(\"True Positive Rate\")\n",
-        "    plt.title(\"AUC-ROC Curve\")\n",
-        "    plt.legend()\n",
-        "    plt.grid(True)\n",
-        "    plt.show()\n",
-        "\n",
-        "# Main LSTM function\n",
-        "def LSTM_Model(X_train, X_test, y_train, y_test, epochs_number=10):\n",
-        "    print(\"LSTM - Long Short-Term Memory Network\")\n",
-        "\n",
-        "    # Reshape input to 3D for LSTM [samples, timesteps, features]\n",
-        "    X_train = X_train.to_numpy().reshape(X_train.shape[0], X_train.shape[1], 1)\n",
-        "    X_test = X_test.to_numpy().reshape(X_test.shape[0], X_test.shape[1], 1)\n",
-        "\n",
-        "    model = Sequential()\n",
-        "    model.add(LSTM(64, input_shape=(X_train.shape[1], 1), return_sequences=False))\n",
-        "    # model.add(LSTM(64, return_sequences=False))\n",
-        "    model.add(Dense(64, activation='relu'))\n",
-        "    model.add(Dense(1, activation='sigmoid'))\n",
-        "\n",
-        "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
-        "\n",
-        "    model.summary()\n",
-        "\n",
-        "    # Metrics callback\n",
-        "    metrics_callback = LSTMMetricsCallback(X_test, y_test)\n",
-        "\n",
-        "    # Train\n",
-        "    history = model.fit(X_train, y_train,\n",
-        "                        epochs=epochs_number,\n",
-        "                        shuffle=False,\n",
-        "                        validation_split=0,\n",
-        "                        verbose=1,\n",
-        "                        callbacks=[metrics_callback])\n",
-        "\n",
-        "    # Predict\n",
-        "    y_pred_prob = model.predict(X_test)\n",
-        "    y_pred = (y_pred_prob > 0.5).astype(\"int32\")\n",
-        "\n",
-        "    # Visualize\n",
-        "    plot_metrics(metrics_callback, y_test, y_pred_prob, y_pred)\n",
-        "\n",
-        "    return model\n"
-      ],
-      "metadata": {
-        "id": "2l_QU5K76ql4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "xYxvZN0Rguxs"
       },
@@ -1059,71 +906,71 @@
       },
       "outputs": [],
       "source": [
-        "# import os  # Importing os to handle folder paths\n",
+        "import os  # Importing os to handle folder paths\n",
         "\n",
-        "# def results(y_test, prediction, save_folder=None):\n",
-        "#     # Calculate metrics\n",
-        "#     accuracy = 100 * accuracy_score(y_test, prediction)\n",
-        "#     # rmse = mean_squared_error(y_test, prediction, squared=False)\n",
-        "#     # import numpy as np\n",
-        "#     mse = np.sqrt(mean_squared_error(y_test, prediction))\n",
-        "#     mae = mean_absolute_error(y_test, prediction)\n",
-        "#     f1 = 100 * precision_recall_fscore_support(y_test, prediction, average='weighted')[2]  # Weighted F1 score\n",
-        "#     auc = 100 * roc_auc_score(y_test, prediction)\n",
+        "def results(y_test, prediction, save_folder=None):\n",
+        "    # Calculate metrics\n",
+        "    accuracy = 100 * accuracy_score(y_test, prediction)\n",
+        "    # rmse = mean_squared_error(y_test, prediction, squared=False)\n",
+        "    # import numpy as np\n",
+        "    mse = np.sqrt(mean_squared_error(y_test, prediction))\n",
+        "    mae = mean_absolute_error(y_test, prediction)\n",
+        "    f1 = 100 * precision_recall_fscore_support(y_test, prediction, average='weighted')[2]  # Weighted F1 score\n",
+        "    auc = 100 * roc_auc_score(y_test, prediction)\n",
         "\n",
-        "#     # Print metrics\n",
-        "#     print(f\"Accuracy: {accuracy:.2f}%\")\n",
-        "#     print(f\"RMSE: {rmse:.4f}\")\n",
-        "#     print(f\"MAE: {mae:.4f}\")\n",
-        "#     print(f\"F1 Score (Weighted): {f1:.2f}%\")\n",
-        "#     print(f\"AUC: {auc:.2f}%\")\n",
+        "    # Print metrics\n",
+        "    print(f\"Accuracy: {accuracy:.2f}%\")\n",
+        "    print(f\"RMSE: {rmse:.4f}\")\n",
+        "    print(f\"MAE: {mae:.4f}\")\n",
+        "    print(f\"F1 Score (Weighted): {f1:.2f}%\")\n",
+        "    print(f\"AUC: {auc:.2f}%\")\n",
         "\n",
-        "#     # Generate the confusion matrix\n",
-        "#     cm = confusion_matrix(y_test, prediction)\n",
+        "    # Generate the confusion matrix\n",
+        "    cm = confusion_matrix(y_test, prediction)\n",
         "\n",
-        "#     # Plot the confusion matrix as a heatmap\n",
-        "#     plt.figure(figsize=(8, 6))\n",
-        "#     sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=False, annot_kws={\"size\": 16})\n",
+        "    # Plot the confusion matrix as a heatmap\n",
+        "    plt.figure(figsize=(8, 6))\n",
+        "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=False, annot_kws={\"size\": 16})\n",
         "\n",
-        "#     # Add labels to the plot\n",
-        "#     plt.xlabel('Predicted Labels', fontsize=14)\n",
-        "#     plt.ylabel('True Labels', fontsize=14)\n",
-        "#     plt.title('Confusion Matrix', fontsize=16)\n",
+        "    # Add labels to the plot\n",
+        "    plt.xlabel('Predicted Labels', fontsize=14)\n",
+        "    plt.ylabel('True Labels', fontsize=14)\n",
+        "    plt.title('Confusion Matrix', fontsize=16)\n",
         "\n",
-        "#     # Ensure the plot is displayed properly\n",
-        "#     plt.xticks(ticks=[0.5, 1.5], labels=['Normal (0)', 'Fraud (1)'], fontsize=12)\n",
-        "#     plt.yticks(ticks=[0.5, 1.5], labels=['Normal (0)', 'Fraud (1)'], fontsize=12, rotation=0)\n",
+        "    # Ensure the plot is displayed properly\n",
+        "    plt.xticks(ticks=[0.5, 1.5], labels=['Normal (0)', 'Fraud (1)'], fontsize=12)\n",
+        "    plt.yticks(ticks=[0.5, 1.5], labels=['Normal (0)', 'Fraud (1)'], fontsize=12, rotation=0)\n",
         "\n",
-        "#     # Save the confusion matrix plot as a PDF\n",
-        "#     if save_folder is not None:\n",
-        "#         if not os.path.exists(save_folder):\n",
-        "#             os.makedirs(save_folder)\n",
-        "#         cm_pdf_path = os.path.join(save_folder, 'confusion_matrix.pdf')\n",
-        "#         plt.savefig(cm_pdf_path, format='pdf')\n",
+        "    # Save the confusion matrix plot as a PDF\n",
+        "    if save_folder is not None:\n",
+        "        if not os.path.exists(save_folder):\n",
+        "            os.makedirs(save_folder)\n",
+        "        cm_pdf_path = os.path.join(save_folder, 'confusion_matrix.pdf')\n",
+        "        plt.savefig(cm_pdf_path, format='pdf')\n",
         "\n",
-        "#     plt.show()\n",
+        "    plt.show()\n",
         "\n",
-        "#     # Bar plot for the metrics\n",
-        "#     metrics = ['Accuracy', 'RMSE', 'MAE', 'F1 Score', 'AUC']\n",
-        "#     values = [accuracy, rmse, mae, f1, auc]\n",
+        "    # Bar plot for the metrics\n",
+        "    metrics = ['Accuracy', 'RMSE', 'MAE', 'F1 Score', 'AUC']\n",
+        "    values = [accuracy, rmse, mae, f1, auc]\n",
         "\n",
-        "#     plt.figure(figsize=(10, 6))\n",
-        "#     sns.barplot(x=metrics, y=values, palette='viridis')\n",
+        "    plt.figure(figsize=(10, 6))\n",
+        "    sns.barplot(x=metrics, y=values, palette='viridis')\n",
         "\n",
-        "#     # Add value labels on top of the bars\n",
-        "#     for i, value in enumerate(values):\n",
-        "#         plt.text(i, value + 1, f'{value:.2f}', ha='center', fontsize=12)\n",
+        "    # Add value labels on top of the bars\n",
+        "    for i, value in enumerate(values):\n",
+        "        plt.text(i, value + 1, f'{value:.2f}', ha='center', fontsize=12)\n",
         "\n",
-        "#     plt.title('Model Performance Metrics', fontsize=16)\n",
-        "#     plt.ylabel('Value', fontsize=14)\n",
-        "#     plt.ylim(0, max(values) + 5)  # Adjust ylim for better visualization\n",
+        "    plt.title('Model Performance Metrics', fontsize=16)\n",
+        "    plt.ylabel('Value', fontsize=14)\n",
+        "    plt.ylim(0, max(values) + 5)  # Adjust ylim for better visualization\n",
         "\n",
-        "#     # Save the bar plot as a PDF\n",
-        "#     if save_folder is not None:\n",
-        "#         bar_pdf_path = os.path.join(save_folder, 'model_performance_metrics.pdf')\n",
-        "#         plt.savefig(bar_pdf_path, format='pdf')\n",
+        "    # Save the bar plot as a PDF\n",
+        "    if save_folder is not None:\n",
+        "        bar_pdf_path = os.path.join(save_folder, 'model_performance_metrics.pdf')\n",
+        "        plt.savefig(bar_pdf_path, format='pdf')\n",
         "\n",
-        "#     plt.show()\n"
+        "    plt.show()\n"
       ]
     },
     {
